[package]
name = "cajal"
version = "0.1.0"
authors = ["Zachary Tong <zacharyjtong@gmail.com>"]


[dependencies]
roaring = "0.4.0"
rustc-serialize = "*"
env_logger = "*"
log = "*"
toml = "*"
rand = "*"
enum_primitive = "*"
num = "0.1.30"

[dependencies.rayon]
git = "https://github.com/nikomatsakis/rayon"
